# Hackatho2-phase3--todo-ai-chatbot

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  GITHUB_PUSH_GUIDE.md  README.md  docker-compose.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  ruff.toml
backend/src/: db.py
backend/src/agent/: config.py
backend/src/api/: errors.py  schemas.py
backend/src/mcp/: __init__.py  server.py
backend/src/mcp/tools/: __init__.py  complete_task.py  delete_task.py  list_tasks.py
backend/src/models/: __init__.py
backend/src/services/: task_service.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: ChatWindow.tsx  MessageInput.tsx  MessageList.tsx  SignUpBuddy.tsx
frontend/src/hooks/: useChat.ts
hf-backend/: Dockerfile  README.md
hf-backend/src/: __init__.py  db.py
hf-backend/src/agent/: runner.py
hf-backend/src/api/: main.py  middleware.py
hf-backend/src/mcp/: schemas.py
hf-backend/src/migrations/: 001_initial.sql
hf-backend/src/models/: conversation.py  message.py  task.py
hf-backend/src/services/: conversation_service.py  message_service.py
history/prompts/001-todo-ai-chatbot/: 0001-todo-chatbot-implementation-plan.plan.prompt.md  (+4 more)
specs/001-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+10 files in other folders)
